passed 'z-index' to fix contact page link not opening.

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
     align-items: center;
     justify-content: center;
     position:fixed;
+    z-index: 1000;
 }
 
 .navbar ul li {
@@ -77,15 +78,15 @@
     color: white;
 }
 
-.content, h1 {
+.content h1 {
     font-size: 60px;
-    margin-top: 25%;
+    margin-top: 30%;
 }
 
-.content, p {
-    margin: 30px auto;
+.content p {
+    margin: 10px auto;
     font-weight: 100px;
-    line-height: 10px;
+    line-height: 20px;
     font-size: 30px;
 }
 
@@ -108,6 +109,7 @@
     animation-delay: 2.2s;
 }
 
+
 /* Home Social Links */
 
 .social-links {
@@ -124,11 +126,12 @@
 }
 
 .social-links .btn {
-    margin: 0, 10px;
+    margin: 0 10px;
     border-color: #ffff;
     justify-content: space-between;
     font-size: 24px;
 }
+
 
 @keyframes spin {
     from {transform: rotateY(0deg);}
@@ -141,6 +144,7 @@
         transform: translateY(0);
     }
 }
+
 
 
 /* Contact Page */
@@ -165,6 +169,7 @@
     align-items: center;
     justify-content: center;
     position:fixed;
+    z-index: 0;
 }
 
 
@@ -201,18 +206,18 @@
     font-weight: 100px;
     font-size: 50px;
     line-height: 20px;
-    
-   
+    font-size: 50px;
+    margin-bottom: 50px;
 }
 
-.contact-content, p {
+.contact-content p {
     margin: 20px auto;
     margin-bottom: 50px;
     font-size: 30px;
     font-weight: 100px;
     line-height: 20px;
-    
-    
+    font-size: 30px;
+    margin-bottom: 50px;
 }
 
 
@@ -230,7 +235,7 @@
 
 
 .contact-btns .btn {
-    margin: 0, 60px;
+    margin: 0 60px;
     border-color: #ffff;
     justify-content: space-between;
     font-size: 50px;
